Parte Delivering concluída

--- a/index.html
+++ b/index.html
@@ -13,35 +13,42 @@
 
                	<div class="card-list">
 	               	<div class="delivering">
-		            	<p><b><h1>Delivering good designs since 1954</h1></b></p>
-		            	<p>We're the first multi-purpose design kit solutions for businesses. 
-		                	We help you bridge gaps between you laytouts, templates and developers to empower all involved.</p>
-	               	</div>
-
+		            	<h2>Delivering good designs since 1954 🚚💨</h2>
+					</div>
+					
+					<div class="sub-delivering">
+							<p>We're the first multi-purpose design kit solutions for businesses. 
+								We help you bridge <br> gaps between you layouts, templates and developers to empower all involved.</p>
+					</div>
+		            	
 		            <ul class="info">
 		            	<li>
-		            		<h2>Support</h2>
+							<img src="./imagens/phone.svg" class="icons-card" />
+		            		<h3>Support</h3>
 		            		<p>Delivering faster and more personalized support 
 		            		with shared screens and cool design systems for Figma</p>
-		            		<button>Learn more</button>
+		            		<button class="bot-learn">Learn more</button>
 		            	</li>
 		            	<li>
-		            		<h2>Sales growth</h2>
+							<img src="./imagens/graphic.svg" class="icons-card" />
+		            		<h3>Sales growth</h3>
 							<p>Identify qualified customers with easy-to-use 
 							live chat messaging and Al-based Sales Bot</p>
-							<button>Learn more</button>
+							<button class="bot-learn">Learn more</button>
 						</li>
 						<li>
-							<h2>Coponents-driven</h2>
+							<img src="./imagens/thunder.svg" class="icons-card" />
+							<h3>Coponents-driven</h3> 
 							<p>Delivering faster and more personalized support 
 							with shared screens and cool design systems for Figma</p>
-							<button>Learn more</button>
+							<button class="bot-learn">Learn more</button>
 						</li>
 						<li>
-							<h2>Swap the icon</h2>
+							<img src="./imagens/like.svg" class="icons-card" />
+							<h3>Swap the icon</h3>
 							<p>You can toggle to any icon within Instances 
 							and customize outlined stroke to more bolder or lighter</p>
-							<button>Learn more</button>
+							<button class="bot-learn">Learn more</button>
 						</li>
 		            </ul>
 		        </div>
