Adicionando mais uma parte no página

--- a/index.html
+++ b/index.html
@@ -10,6 +10,57 @@
 		<body>
 			<main>
 				
+				<div class="offers">
+					<div class="pricing">
+						<h2>Affordable pricing</h2>
+					</div>
+
+					<div class="sub-pricing">
+						<h4>Bill me <span class="monthly">monthly</span> . yearly</h4>
+					</div>
+
+					<ul class="price-info">	
+						<li>
+							<p class="price-card">Like a pussy</p>
+							<h3>Free <span class="sub-value"> / forever</span></h3>
+							<img src="imagens/icon-gray.svg" class="icon-gray" />
+							<p class="free-content">Components-driven system</p>
+							<img src="imagens/icon-gray.svg" class="icon-gray" />
+							<p class="free-content">Sales-boosting landing pages</p>
+							<img src="imagens/icon-gray.svg" class="icon-gray" />
+							<p class="free-content">Awesome Feather icons pack</p>
+							<button class="try">Try for free</button>
+						</li>	
+						<li>
+							<p class="price-card">Individual <span class="price-card-box">BEST!</span></p>
+							<h3>$24 <span class="sub-value"> / month</span></h3>
+							<img src="imagens/icon-yellow.svg" class="icon-yellow" />
+							<p class="full-content">Components-driven system</p>
+							<img src="imagens/icon-yellow.svg" class="icon-yellow" />
+							<p class="full-content">Sales-boosting landing pages</p>
+							<img src="imagens/icon-yellow.svg" class="icon-yellow" />
+							<p class="full-content">Awesome Feather icons pack</p>
+							<img src="imagens/icon-yellow.svg" class="icon-yellow" />
+							<p class="full-content">Themed into 3 different styles</p>
+							<img src="imagens/icon-yellow.svg" class="icon-yellow" />
+							<p class="full-content">Will help to learn Figma</p>
+							<button class="regular">Regular license</button>
+						</li>
+						<li>
+							<p class="price-card">Corporate</p>
+							<h3>$12 <span class="sub-value"> / editor</span></h3>
+							<img src="imagens/icon-green.svg" class="icon-green" />
+							<p class="parcial-content">Components-driven system</p>
+							<img src="imagens/icon-green.svg" class="icon-green" />
+							<p class="parcial-content">Sales-boosting landing pages</p>
+							<img src="imagens/icon-green.svg" class="icon-green" />
+							<p class="parcial-content">Awesome Feather icons pack</p>
+							<img src="imagens/icon-green.svg" class="icon-green" />
+							<p class="parcial-content">Themed into 3 different styles</p>
+							<button class="extended">Extended license</button>
+						</li>
+					</ul>
+				</div>
 
                	<div class="card-list">
 	               	<div class="delivering">
